; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/serio/extr_ps2-gpio.c___ps2_gpio_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/serio/extr_ps2-gpio.c___ps2_gpio_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.serio = type { %struct.ps2_gpio_data* }
%struct.ps2_gpio_data = type { i8, i32, i32, i32, i32 }

@PS2_MODE_TX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.serio*, i8)* @__ps2_gpio_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__ps2_gpio_write(%struct.serio* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.serio*, align 8
  %4 = alloca i8, align 1
  %5 = alloca %struct.ps2_gpio_data*, align 8
  store %struct.serio* %0, %struct.serio** %3, align 8
  store i8 %1, i8* %4, align 1
  %6 = load %struct.serio*, %struct.serio** %3, align 8
  %7 = getelementptr inbounds %struct.serio, %struct.serio* %6, i32 0, i32 0
  %8 = load %struct.ps2_gpio_data*, %struct.ps2_gpio_data** %7, align 8
  store %struct.ps2_gpio_data* %8, %struct.ps2_gpio_data** %5, align 8
  %9 = load %struct.ps2_gpio_data*, %struct.ps2_gpio_data** %5, align 8
  %10 = getelementptr inbounds %struct.ps2_gpio_data, %struct.ps2_gpio_data* %9, i32 0, i32 4
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @disable_irq_nosync(i32 %11)
  %13 = load %struct.ps2_gpio_data*, %struct.ps2_gpio_data** %5, align 8
  %14 = getelementptr inbounds %struct.ps2_gpio_data, %struct.ps2_gpio_data* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @gpiod_direction_output(i32 %15, i32 0)
  %17 = load i32, i32* @PS2_MODE_TX, align 4
  %18 = load %struct.ps2_gpio_data*, %struct.ps2_gpio_data** %5, align 8
  %19 = getelementptr inbounds %struct.ps2_gpio_data, %struct.ps2_gpio_data* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  %20 = load i8, i8* %4, align 1
  %21 = load %struct.ps2_gpio_data*, %struct.ps2_gpio_data** %5, align 8
  %22 = getelementptr inbounds %struct.ps2_gpio_data, %struct.ps2_gpio_data* %21, i32 0, i32 0
  store i8 %20, i8* %22, align 4
  %23 = load %struct.ps2_gpio_data*, %struct.ps2_gpio_data** %5, align 8
  %24 = getelementptr inbounds %struct.ps2_gpio_data, %struct.ps2_gpio_data* %23, i32 0, i32 1
  %25 = call i32 @usecs_to_jiffies(i32 200)
  %26 = call i32 @schedule_delayed_work(i32* %24, i32 %25)
  ret i32 0
}

declare dso_local i32 @disable_irq_nosync(i32) #1

declare dso_local i32 @gpiod_direction_output(i32, i32) #1

declare dso_local i32 @schedule_delayed_work(i32*, i32) #1

declare dso_local i32 @usecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
